[tool.poetry]
name = "whisker-plots"
version = "0.1.0"
description = "Interactive data visualizations"
authors = ["Chris Beard"]
readme = "README.md"
packages = [{ include = "whisker_plots", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
altair = "^5.0.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"
notebook = "^7.0.0"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
